# iShape-js

./: Cargo.toml  README.md  build.txt  run_mdbook-server.sh  run_public_npm.sh
docs/: 404.html  book.toml  chapter_1.html  index.html  print.html  searcher-c2a407aa.js  searchindex-44691e32.js  searchindex-4b6c79bb.js  searchindex-6cca56a9.js  searchindex.js  searchindex.json  toc-034434df.js  toc-3cdf222e.js  toc.html  toc.js
docs-gen/: book.toml
docs-gen/src/: SUMMARY.md
docs-gen/src/demo/: editor_demo.md  stars_demo.md
docs-gen/src/embedded/: star.html
docs-gen/src/overlay/: boolean_editor.md  demo.md  doc.md  outline.md  overlay.md  overlay_editor.md  overlay_rules.md  performance.md  shapes_editor.md  stars_demo.md  stroke.md  tests_outline.json  tests_stroke.json
docs-gen/src/triangle/: delaunay.md  demo.md  (+3 more)
docs/demo/: editor_demo.html  stars_demo.html
docs/overlay/: boolean_editor.html  demo.html  doc.html  filling_rules.html  outline.html  overlay.html  overlay_editor  overlay_editor.html  overlay_rules.html  performance.html  shapes_editor.html  stars_demo.html  stroke.html
docs/triangle/: delaunay.html  demo.html  tessellation.html  triangle.html  triangulation.html
examples/html/: index.html  run_http_server.sh
examples/node/: app.js  package-lock.json  package.json
examples/node_project/: package-lock.json  package.json
examples/simple/: index.html
examples/test/: app.js  package-lock.json  package.json
js/: helpers.js
pkg/: .gitignore  README.md  i_shape-0.3.0.tgz  i_shape-0.4.0.tgz  i_shape-0.5.0.tgz  i_shape-0.6.0.tgz  i_shape.d.ts  i_shape.js  i_shape_bg.wasm  i_shape_js_bg.wasm  i_shape_js_bg.wasm.d.ts  ishape_wasm-1.0.0.tgz  ishape_wasm-1.0.1.tgz  ishape_wasm-1.0.2.tgz  ishape_wasm-1.0.3.tgz  ishape_wasm-1.0.4.tgz  ishape_wasm-1.0.5.tgz  ishape_wasm-1.0.6.tgz  ishape_wasm-1.0.7.tgz  ishape_wasm.d.ts  ishape_wasm.js  ishape_wasm_bg.wasm  ishape_wasm_bg.wasm.d.ts  package.json
src/: buffering.rs  data.rs  fill_rule.rs  lib.rs  logger.rs  overlay.rs  overlay_graph.rs  overlay_rule.rs  shape_type.rs  style.rs
src/bool/: buffering.rs  fill_rule.rs  mod.rs  overlay.rs  overlay_rule.rs  shape_type.rs  style.rs  utils.rs
src/overlay/: js_fill_rule.rs  js_overlay.rs  js_overlay_graph.rs  mod.rs
src/shape/: data.rs  js_path.rs  js_shape.rs  mod.rs
src/triangle/: mod.rs  triangulator.rs
(+83 files in other folders)
