[package]
name = "ishape_wasm"
version = "1.1.5"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2021"
description = "Boolean Operations for 2D Polygons. Supported operations: intersection, union, difference, XOR, and self-intersections for all polygon varieties."
license = "MIT"
repository = "https://github.com/iShape-Rust/iShape-js"

[profile.release]
opt-level = 3
lto = false
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
i_overlay = "~1.9.4"
#i_overlay = { path = "../iOverlay" }
#log = "0.4.22"
#console_log = "^1.0.0"
#console_error_panic_hook = "^0"


wasm-bindgen = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
serde-wasm-bindgen = "^0.6"

